# DR-Plugs

./: .gitignore  .gitmodules  OTF_Ideas.txt  README.md  old_instructions.txt
.github/: copilot-instructions.md
DR-ArpRand/: .gitignore  CMakeLists.txt
DR-ArpRand/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
DR-ArpRand/Source/Utils/: FlatRotaryLookAndFeel.h  HorizontalRangeSlider.cpp  HorizontalRangeSlider.h  HorizontalRangeSliderAttachment.cpp  Theme.h  ThemedKnob.h  VerticalRangeSlider.cpp  VerticalRangeSlider.h  VerticalRangeSliderAttachment.h
DR-Chronoverb/: .clang-format  CMakeLists.txt  Chronoverb.edn  ChronoverbInstructions.txt  ChronoverbStageDiagram.html  Chronoverb_Ideas.txt  DistortionTapeUIDeseign.txt  TODO.txt  Toolchain-x86_64-w64-mingw32.cmake  bitch_log.txt  bitch_log2.txt  bitch_log3.txt  build_vst3.sh  fuck_info.txt  grok_deelay_design_estimate.txt  grok_deelay_diffusionAmount.txt
DR-Chronoverb/Assets/BG/: LogoAndBG.blend  LogoAndBG.blend1
DR-Chronoverb/Source/: CMakeLists.txt  ParameterEntries.h  ParameterEntryTypes.h  PluginEditor.cpp  PluginEditor.h  PluginParameterRegistry.cpp  PluginParameterRegistry.h  PluginProcessor.cpp  PluginProcessor.h
DR-Chronoverb/Source/Filters/: AllpassFilter.cpp  AllpassFilter.h  Chronoverb.cpp  Chronoverb.h  ChronoverbParams.cpp  ChronoverbUtils.h  ClusteredDiffusionDelay.cpp  ClusteredDiffusionDelay.h  ComputerKeyboardSquareSynth.cpp  ComputerKeyboardSquareSynth.h  DiffusedDelayReverb.cpp  DiffusedDelayReverb.h  HighpassFilter.cpp  HighpassFilter.h  ImpulseClickSynth.h  LowpassFilter.cpp  LowpassFilter.h  MiniAllpass.h  NewDelayReverb.cpp  NewDelayReverb.h  NewDelayReverbParams.cpp  SimpleDelayReverb.cpp  SimpleDelayReverb.h  StereoWidener.cpp  StereoWidener.h
DR-Chronoverb/Source/Filters/ClusteredDiffusionDelay/: DelayLine.h  DelayLineOld.h  Diffusion.h  DryWetMixer.h  Ducking.h  FeedbackDamping.h  FeedbackDelayNetwork.h  HaasStereoWidener.h  Highpass.h  Lowpass.h  Smoothers.h
DR-Chronoverb/Source/Filters/NewDelayReverb/: DampingFilter.h  DelayLine.h  DelayTimeSegment.h  DeverbDiffusionAllpass.h  DeverbDiffusionChain.cpp  DeverbDiffusionChain.h  DiffusionAllpass.h  DiffusionChain.h  FeedbackDelayNetwork.h  Helpers.h  PitchShifter.h  PitchShiftingEngine.h
DR-Chronoverb/Source/Filters/NewDelayReverb/PitchShifter/: GranularPitchBackend.h  PhaseVocoderPitchBackend.h  PingPongOctaveSequence.h  PitchShiftingUtils.h  ProgressiveOctaveSequence.h  RandomOctaveSequence.h  WSOLAPitchBackend.cpp  WSOLAPitchBackend.h  WSOLAPitchBackend_v2.h  WSOLAPitchBackend_v3.h
DR-Chronoverb/Source/Filters/NewDelayReverb/Stages/: Delay.cpp  Delay.h  Deverb.cpp  Deverb.h  Distortion.cpp  Distortion.h  Ducking.cpp  Ducking.h  Filters.cpp  Filters.h  PitchShifter.cpp  PitchShifter.h  Reverb.cpp  Reverb.h  Stereo.cpp  Stereo.h
DR-Chronoverb/Source/Filters/NewDelayReverb/Stages/Distortion/: Chebyshev.h  DistortionModuleDSP.h  HardClipper.h
DR-Chronoverb/Source/Filters/NewDelayReverb/Stages/Old/: Delay.h  Reverb.h
DR-Chronoverb/Source/Filters/NewDelayReverb/Stages/Utils/: DCBlocker.h
DR-Chronoverb/Source/UI/: PitchPageLayout.h  TabbedPageboxLayout.h
DR-Chronoverb/Source/UI/Rack/: DistortionRackLayout.cpp  DistortionRackLayout.h  Rack.cpp  Rack.h  RackTheme.h
DR-Chronoverb/Source/UI/Rack/ModuleSystem/: Module.cpp  Module.h  ModuleThemeProvider.h
DR-Chronoverb/Source/UI/Rack/Modules/: DistortionModule.cpp  DistortionModule.h
DR-Chronoverb/Source/UI/Rack/Options/: ModuleDropdown.cpp  ModuleDropdown.h  ModuleKnob.cpp  ModuleKnob.h  ModuleKnobLookAndFeel.h  ModuleOption.cpp  ModuleOption.h  ModuleSegmentedButton.cpp  ModuleSegmentedButton.h  ModuleToggle.cpp  ModuleToggle.h
DR-Chronoverb/Source/Utils/: FlatLabel.h  FlatRotaryLookAndFeel.h  HorizontalRangeSlider.cpp  HorizontalRangeSlider.h  LabelAttachment.h  PMath.h  RoundedToggle.h  SegmentedButton.h  TabbedPageBox.h  Theme.h  ThemeContext.h  ThemedCheckbox.h  ThemedDropdown.cpp  ThemedDropdown.h  ThemedKnob.h  ThemedKnobWithLabel.h  ThemedSlider.h  TooltipOverlay.h  UIHelpers.cpp  UIHelpers.h
DR-Chronoverb/Tasks/: PitchShiftingImprovements.md  Progress.md  TODO.md
DR-Chronoverb/Tools/: DiffusionVisualizer_Deverb.py  DiffusionVisualizer_old.py
DR-Template/: CMakeLists.txt
DR-Template/Source/: PluginProcessor.cpp
DR-Template/Source/Utils/: HorizontalRangeSliderAttachment.h  SteppedHorizontalRangeSlider.cpp  SteppedHorizontalRangeSlider.h  ThemedCheckbox.h  VerticalRangeSlider.cpp  VerticalRangeSlider.h
DR-UpDownGate/: .gitignore  CMakeLists.txt
DR-UpDownGate/Assets/Blend/: BGAndLogo.blend  BGAndLogo.blend1
DR-UpDownGate/Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
DR-UpDownGate/Source/Utils/: EnvelopeKnob.h  FlatRotaryLookAndFeel.h  FlatTextBox.h  GateLevelDisplay.cpp  GateLevelDisplay.h  Theme.h  TooltipOverlay.h  VerticalRangeSlider.cpp  VerticalRangeSlider.h  VerticalRangeSliderAttachment.cpp  VerticalRangeSliderAttachment.h
Docs/: cpp_std_math_cpu_cost_ranking.html
Docs/CoreImplementations/: 00_ComparisonSummary.txt  01_SingleSerialChainGainRamp.txt  02_SingleChainDelayOffsetCompensation.txt  03_SingleChainPerStageGainCascade.txt  04_SingleChainWetDryBlend.txt  05_AllpassChainInFeedbackPath.txt  06_HybridPreWriteRecommended.txt
Docs/Deelay_IR_Comparisons/: ir_compare_DiffAmt_0.15_503ms_DiffSize_1_WetOnly_vs_DiffAmt_0.5_503ms_DiffSize_1_WetOnly.json  ir_compare_DiffAmt_0.5_1000ms_DiffSize_1_WetOnly_vs_DiffAmt_0.5_503ms_DiffSize_1_WetOnly.json  ir_compare_DiffAmt_0.5_1000ms_DiffSize_1_WetOnly_vs_DiffAmt_1_1000ms_DiffSize_1_WetOnly.json  ir_compare_DiffAmt_0.5_503ms_DiffSize_1_WetOnly_vs_DiffAmt_1_503ms_DiffSize_1_WetOnly.json  ir_compare_DiffAmt_1_1000ms_DiffSize_1_WetOnly_vs_DiffAmt_0.5_503ms_DiffSize_1_WetOnly.json
Docs/ModuleContainer/Components/: 01_ModuleContainer.txt  02_Module.txt  03_DistortionModule.txt  04_TapeModule.txt  05_IndustryStandardNaming.txt
Docs/ModuleContainer/Scaffolding/: 01_ModuleThemeProvider.txt  (+7 more)
Utils/: MoveFolder.sh
